--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
   <div class="content">
       <div class="home">
  <section>
-    <img src= "/images/study-areas_hero.jpg" alt="Study Rooms at Townsville University Library" style="width:100%">
+    <img src= "images/study-areas_hero.jpg" alt="Study Rooms at Townsville University Library" style="width:100%">
     </section>
       <div class="jumbotron">
         <div class="container">
@@ -22,7 +22,7 @@ title: Home
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="#">
-        <img src="/images/computer-lab.jpg" alt="Computer Lab" style="width:100%">
+        <img src="images/computer-lab.jpg" alt="Computer Lab" style="width:100%">
         <div class="caption">
           <p>Computer Lab</p>
         </div>
@@ -32,7 +32,7 @@ title: Home
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="#">
-        <img src="/images/students1.jpg" alt="Study Lounge" style="width:100%">
+        <img src="images/students1.jpg" alt="Study Lounge" style="width:100%">
         <div class="caption">
           <p>Study Lounge</p>
         </div>
@@ -42,7 +42,7 @@ title: Home
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="#">
-        <img src="/images/collab-table.jpg" alt="Collaboration Room" style="width:100%">
+        <img src="images/collab-table.jpg" alt="Collaboration Room" style="width:100%">
         <div class="caption">
           <p>Collaboration Room</p>
         </div>
@@ -52,7 +52,7 @@ title: Home
    <div class="col-md-4">
    <div class="thumbnail">
       <a href="#">
-        <img src="/images/computer-lab.jpg" alt="Computer Lab" style="width:100%">
+        <img src="images/computer-lab.jpg" alt="Computer Lab" style="width:100%">
         <div class="caption">
           <p>Computer Lab</p>
         </div>
@@ -62,7 +62,7 @@ title: Home
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="#">
-        <img src="/images/students1.jpg" alt="Study Lounge" style="width:100%">
+        <img src="images/students1.jpg" alt="Study Lounge" style="width:100%">
         <div class="caption">
           <p>Study Lounge</p>
         </div>
@@ -72,7 +72,7 @@ title: Home
   <div class="col-md-4">
     <div class="thumbnail">
       <a href="#">
-        <img src="/images/collab-table.jpg" alt="Collaboration Room" style="width:100%">
+        <img src="images/collab-table.jpg" alt="Collaboration Room" style="width:100%">
         <div class="caption">
           <p>Collaboration Room</p>
         </div>
